[package]
name = "bench"
version = "0.1.0"
authors = ["codri"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
bench = false

[dependencies]
criterion = "0.3.0"
xorfilter = { version = "*", path = ".." }

[[bench]]
name = "bench_tests"
harness = false
path = "src/bench.rs"